--- a/content/resources/11-201f02.md
+++ b/content/resources/11-201f02.md
@@ -1,12 +1,14 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/11-201-gateway-planning-action-fall-2002/28bab60a749e4570885978b67a423a28_11-201f02.jpg
+file: /media/courses/11-201-gateway-planning-action-fall-2002/28bab60a749e4570885978b67a423a28_11-201f02.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A Seven Step Model of Planning Practice. (Image courtesy of Lawrence Susskind.)
   credit: ''
   image-alt: A multi-color diagram showing a seven step process.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 11-201f02.jpg
 uid: 28bab60a-749e-4570-8859-78b67a423a28
