--- a/content/resources/11-201f02-th.md
+++ b/content/resources/11-201f02-th.md
@@ -8,6 +8,7 @@ image_metadata:
   credit: ''
   image-alt: A multi-color diagram showing a seven step process.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-201f02-th.jpg
