--- a/content/resources/11-201f02.md
+++ b/content/resources/11-201f02.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/11-201-gateway-planning-action-fall-2002/28bab60a749e4570885978b67a423a28_11-201f02.jpg
+file_size: 55903
 file_type: image/jpeg
 image_metadata:
   caption: A Seven Step Model of Planning Practice. (Image courtesy of Lawrence Susskind.)
